# fastlane-rfc2544 — High-performance RFC 2544 network benchmarking
# A Rust rewrite of the ByteBlower, Moongen, and Go RFC 2544 implementations.
# Optimized for 400G+ interfaces using AF_XDP, multi-queue, and zero-copy.

[workspace]
members = [
    "crates/fastlane-core",
    "crates/fastlane-dataplane",
    "crates/fastlane-cli",
    "crates/fastlane-payload",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["wwtraveler <wwtraveler@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/wwtraveler/fastlane-rfc2544"
readme = "README.md"
description = "Blazing-fast RFC 2544 network benchmarking for modern high-speed interfaces"

[workspace.dependencies]
fastlane-core = { path = "crates/fastlane-core" }
fastlane-dataplane = { path = "crates/fastlane-dataplane" }
fastlane-cli = { path = "crates/fastlane-cli" }
fastlane-payload = { path = "crates/fastlane-payload" }

clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0"
