[package]
name = "fastlane-dataplane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Dataplane for fastlane-rfc2544 — AF_XDP, multi-queue, ring buffers"

[dependencies]
fastlane-core = { path = "../fastlane-core" }
fastlane-payload = { path = "../fastlane-payload" }
anyhow = { workspace = true }
serde = { workspace = true }
